fixed scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,17 @@
     --primary: #d9d9d9;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+html::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 @layer base {
   body {
     @apply bg-black;
